--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "debounced": "^0.0.5",
     "flatpickr": "^4.6.9",
     "postcss": "^8.2.6",
+    "sortablejs": "^1.14.0",
     "stimulus": "^2.0.0",
     "stimulus_reflex": "3.4.1",
     "swiper": "^6.7.0",
